[gd_scene load_steps=8 format=2]

[ext_resource path="res://Title_Screen/Title.gd" type="Script" id=1]
[ext_resource path="res://Assets/black.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/goodLogo.png" type="Texture" id=3]
[ext_resource path="res://Title_Screen/Buttons.tscn" type="PackedScene" id=4]
[ext_resource path="res://Title_Screen/QuitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/player.jpg" type="Texture" id=6]
[ext_resource path="res://fade_in/Fade.tscn" type="PackedScene" id=7]

[node name="Title" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 636, 358.5 )
texture = ExtResource( 2 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 190.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="CentreRow" type="HBoxContainer" parent="Menu"]
margin_top = 194.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CentreRow"]
margin_right = 518.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 1

[node name="MenuButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 4 )]
margin_top = 103.0
margin_right = 518.0
margin_bottom = 163.0

[node name="QuitButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 5 )]
margin_top = 203.0
margin_right = 518.0
margin_bottom = 263.0
script = null

[node name="CenterContainer" type="CenterContainer" parent="Menu/CentreRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Guitar" type="TextureRect" parent="Menu/CentreRow/CenterContainer"]
margin_left = 109.0
margin_top = 33.0
margin_right = 409.0
margin_bottom = 332.0
texture = ExtResource( 6 )

[node name="FadeIn" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="Menu/CentreRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
